my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ECYCLICIMP/ECYCLICIMP.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\ECYCLICIMP_1.dml:9:1: error ECYCLICIMP: cyclic import
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\ECYCLICIMP_2.dml:8:1: via here
